--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "diamond",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "discord.js": "^11.3.2",
-    "ms": "^2.1.1"
-  },
-  "devDependencies": {},
+  "name": "Diamond",
+  "description": "The #1 bot on discord for moderation.",
+  "version": "0.0.0",
+  "main": "bot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node bot.js"
   },
-  "author": "OreDiamond",
-  "license": "ISC"
+  "dependencies": {
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
+  }
 }
